# mfg-genie-factory

./: .gitignore  GENIE_OPTIMIZATION_PLAN.md  GENIE_OPTIMIZATION_RESULTS.md  README.md  app.py  app.yaml  app_instance.py  benchmark_baseline_20260420_164338.md  benchmark_baseline_20260420_164338_summary.json  benchmark_baseline_20260420_214900.md  benchmark_baseline_20260420_214900_summary.json  layout.py  presets.py  pyproject.toml  requirements.txt  state.py
assets/: custom.css
callbacks/: __init__.py  admin.py  build.py  manage.py
components/: cards.py
genie_factory/: __init__.py  cleanup.py  config.py  data.py  generator.py  genie.py  notebook.py  presets.py  results.py  specs.py  validators.py
genie_factory/specs/aerospace/: demand_forecasting.json  design_space_simulation_for_fuel_efficiency.json  financial_analytics_reporting.json  predictive_maintenance_asset_health.json  product_traceability_anti_counterfeit.json  quality_event_root_cause_analysis.json  supply_materials_planning.json  working_capital_cash_flow_optimization.json
genie_factory/specs/automotive/: design_space_simulation_for_safety.json  product_feature_usage_analytics.json  vehicle_health_maintenance_report.json  vehicle_recall_root_cause_analysis.json
genie_factory/specs/chemicals_materials/: autonomous_lab_experiments.json  demand_forecasting.json  (+2 more)
notebooks/: cleanup.py  quickstart.py
scripts/: deploy_app.sh
services/: admin.py  databricks.py  deployment.py  meta.py
tests/: conftest.py  test_boolean_arithmetic.py  test_results.py  test_validators.py
(+72 files in other folders)
